Added description about github page.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   <script type="text/javascript" src="./javascript/initializer.js"></script>
 </head>
 
-<body></body>
+<body>
+  <div class="content">
+    <h1>Game loops with Javascript and canvas</h1>
+    <div class="description">
+      <p class="source">
+        This is a simple example of how to make to make game loops with Javascript and <a href="https://developer.mozilla.org/en-US/docs/HTML/Canvas/Drawing_Graphics_with_Canvas">canvas</a>.
+      </p>
+      <p>
+        Check out the source. <a href="https://github.com/rasmusrn/gravity_demo">It's on Github</a>.
+      </p>
+    </div>
+    <div class="game_container"></div>
+    <p><a href="http://twitter.com/rasmusrn">Follow me on Twitter :-)</a></p>
+  </div>
+</body>
 
 </html>
