--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Game loops with Javascript and canvas</h1>
     <div class="description">
       <p class="source">
-        This is a simple example of how to make to make game loops with Javascript and <a href="https://developer.mozilla.org/en-US/docs/HTML/Canvas/Drawing_Graphics_with_Canvas">canvas</a>.
+        This is a simple example of how to make game loops with Javascript and <a href="https://developer.mozilla.org/en-US/docs/HTML/Canvas/Drawing_Graphics_with_Canvas">canvas</a>.
       </p>
       <p>
         Check out the source. <a href="https://github.com/rasmusrn/gravity_demo">It's on Github</a>.
