The source is really easy on the eye.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         This is a simple example of how to make game loops with Javascript and <a href="https://developer.mozilla.org/en-US/docs/HTML/Canvas/Drawing_Graphics_with_Canvas">canvas</a>.
       </p>
       <p>
-        Check out the source. <a href="https://github.com/rasmusrn/gravity_demo">It's on Github</a>.
+        The source is simple, readable and beautiful. <a href="https://github.com/rasmusrn/gravity_demo">Read it on Github</a>.
       </p>
     </div>
     <div class="game_container"></div>
